Fix column spacing in ie

--- a/stylesheets/ie.css
+++ b/stylesheets/ie.css
@@ -157,11 +157,11 @@ form {
 }
 
 .col-md-6 {
-  width: 45%;
+  width: 49.5%;
   display: inline-block;
 }
 
 .col-md-4 {
-  width: 30%;
+  width: 33%;
   display: inline-block;
 }
